infra/vpc.tf
resource "aws_vpc" "main" {
  cidr_block           = "10.0.0.0/16"
  
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name        = "monitoring-vpc"
  }
}

##---------------------------------------------------##

resource "aws_subnet" "public_subnet" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.1.0/24"
  
  map_public_ip_on_launch = true 
  availability_zone       = "eu-central-1a"

  tags = {
    Name = "monitoring-public-subnet"
  }
}

##---------------------------------------------------##

resource "aws_internet_gateway" "main_igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "monitoring-igw"
  }
}

##---------------------------------------------------##

resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main_igw.id
  }

  tags = {
    Name = "public-route-table"
  }
}

resource "aws_route_table_association" "public_assoc" {
  subnet_id      = aws_subnet.public_subnet.id
  route_table_id = aws_route_table.public_rt.id
}

##---------------------------------------------------##

resource "aws_security_group" "elk_sg" {
  name        = "elk-monitoring-sg"
  description = "Security group for ELK and SSH"
  vpc_id      = aws_vpc.main.id

  # kibana port
  ingress {
    from_port   = 5601
    to_port     = 5601
    protocol    = "tcp"
    cidr_blocks = ["${chomp(data.http.my_public_ip.response_body)}/32"] 
  }

  # SSH
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["${chomp(data.http.my_public_ip.response_body)}/32"]
  }

  
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
